added function to find the min and max temperature of each day

--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
 </body>
 <script src = "./js/weather.js"></script>
 <script src = "./js/timeConverter.js"></script>
+<script src = "./js/tempMinMax.js"></script>
 <script src = "./js/createDivs.js"></script>
 </html>
