day names, dates, icons and dsecriptions

--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
 <script src = "./js/weather.js"></script>
 <script src = "./js/timeConverter.js"></script>
 <script src = "./js/tempMinMax.js"></script>
+<script src = "./js/weekdaysAndDates.js"></script>
 <script src = "./js/createDivs.js"></script>
 </html>
