--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <link rel="stylesheet" href="./styles/weatherDetails.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Acme|Aldrich|Charmonman|Chicle|Fredoka+One|Luckiest+Guy|Monoton|Notable" rel="stylesheet"> 
-  <title>Weather</title>
+  <link href="https://fonts.googleapis.com/css?family=Acme|Aldrich|Charmonman|Chicle|Fredoka+One|Luckiest+Guy|Monoton|Notable" rel="stylesheet">
+  <link rel="shortcut icon" href="./favicon.ico" />
+  <title>Weather of The Future</title>
 </head>
 <body>
   <section id="search" class="flex-center">
